Latest sort of working

--- a/cone_detection/CMakeLists.txt
+++ b/cone_detection/CMakeLists.txt
@@ -29,6 +29,7 @@ install(
 install(
   PROGRAMS
   cone_detection/main.py
+  cone_detection/lidar_park.py
   DESTINATION lib/${PROJECT_NAME}
 )
 if(BUILD_TESTING)
